--- a/css/estilos.css
+++ b/css/estilos.css
@@ -148,3 +148,11 @@ button{
 	color: white;
 	border-radius: 5px;
 }
+@media all and (max-width: 768px){
+	.header_nav{
+		display: flex;
+		list-style-type:none;
+		justify-content: space-evenly;
+		flex-direction: row;
+		margin-left: 50px;
+}
