--- a/css/estilos.css
+++ b/css/estilos.css
@@ -154,5 +154,5 @@ button{
 		list-style-type:none;
 		justify-content: space-evenly;
 		flex-direction: row;
-		margin-left: 50px;
+		margin-right: 1rem;
 }
