--- a/css/estilos.css
+++ b/css/estilos.css
@@ -155,4 +155,16 @@ button{
 		justify-content: space-evenly;
 		flex-direction: row;
 		margin-right: 1rem;
+		position: center;
+	}
+	.contacto{
+			margin-left: 200px;	
+	}
+	.redes_sociales{
+		list-style-type: none;
+		display: inline-flex;
+		justify-content: space-evenly;
+		margin-right: 1 rem;
+		position: center;
+	}
 }
