--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -16,3 +16,23 @@
     @include discos;
 }
 
+.button {
+	border:none;
+	padding: 5px 10px;
+	text-align: center;
+	font-size: 10px;
+	box-shadow: 2px 2px 10px #000;
+}
+.orange{
+	@extend .button;
+	background: orange;
+}
+.white{
+	@extend .button;
+	background: white;
+}
+.yellow{
+	@extend .button;
+	background: yellow;
+}
+
