--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -1,24 +1,69 @@
-.discos1{
-	display: flex;
-	justify-content: space-evenly;
-	flex-direction: row;
-	list-style-type: none;
-	margin-left: 1 rem;
-	color:  white;
+.discos1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  list-style-type: none;
+  margin-left: 1 rem;
+  color: white;
 }
-.discos2{
-    display: flex;
-	justify-content: space-evenly;
-	flex-direction: row;
-	list-style-type: none;
-	margin-left: 1 rem;
-	color:  white;	
+
+.discos2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  list-style-type: none;
+  margin-left: 1 rem;
+  color: white;
 }
-.discos3{
-	display: flex;
-	justify-content: space-evenly;
-	flex-direction: row;
-	margin-left: 1 rem;
-	list-style-type: none;
-	color: white;
+
+.discos3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  list-style-type: none;
+  margin-left: 1 rem;
+  color: white;
 }
+
+.button, .orange, .white, .yellow {
+  border: none;
+  padding: 5px 10px;
+  text-align: center;
+  font-size: 10px;
+  -webkit-box-shadow: 2px 2px 10px #000;
+          box-shadow: 2px 2px 10px #000;
+}
+
+.orange {
+  background: orange;
+}
+
+.white {
+  background: white;
+}
+
+.yellow {
+  background: yellow;
+}
+/*# sourceMappingURL=estilos.css.map */
