--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,7 +14,7 @@ body{
 	font-weight: bold;
 	text-align: center;
 	color: #EF6C00;
-	font-size: 40px;
+	font-size: 35px;
 	font-weight: 25px;
 	background-color: white;
 	display: inline;
@@ -23,9 +23,12 @@ body{
 .p{
 	font-weight: bold;
 	text-align: center;
-	color: white;
-	font-size: 15px;
-	font-weight: 15px;
+	color: #EF6C00;
+	font-size: 35px;
+	font-weight: 25px;
+	background-color: white;
+	display: inline;
+	margin-top: 10rem;
 }
 .producto{
 	display: flex;
