modificaciones en css

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,6 +30,16 @@ body{
 	display: inline;
 	margin-top: 10rem;
 }
+.subtitulo1{
+	font-weight: bold;
+	text-align: center;
+	color: grey;
+	font-size: 35px;
+	font-weight: 25px;
+	background-color: white;
+	display: inline;
+	margin-top: 10rem;
+}
 .producto{
 	display: flex;
 	justify-content: space-between;
