--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,400;1,600&display=swap');
+@import 'animate.css';
 body{
 	font-family:'Roboto Mono', monoespacio;
 	margin: 20 px;
