--- a/css/estilos.css
+++ b/css/estilos.css
@@ -28,8 +28,10 @@ body{
 	font-size: 35px;
 	font-weight: 25px;
 	background-color: white;
-	display: inline;
-	margin-top: 20rem;
+	margin: auto;
+	margin-top: 0rem;
+	margin-bottom: 10rem;
+	width: 50%;
 }
 .subtitulo1{
 	font-weight: bold;
@@ -38,8 +40,10 @@ body{
 	font-size: 35px;
 	font-weight: 25px;
 	background-color: white;
-	display: inline;
+	margin: auto;
 	margin-top: 2rem;
+	margin-bottom: 10rem;
+	width: 50%;
 }
 .producto{
 	display: flex;
@@ -69,7 +73,9 @@ body{
 	list-style-type:none;
 	justify-content: space-evenly;
 	flex-direction: row;
+	margin: auto;
 	margin-left: 1rem;
+	margin-bottom: 5rem;
 }
 .imagenes{
 	display: flex;
@@ -161,6 +167,9 @@ button{
 	background-color:#EF6C00;
 	color: white;
 	border-radius: 5px;
+	padding: .8rem 1.5rem;
+	border: 1px solid #EF6C00;
+	cursor: pointer;
 }
 @media all and (max-width: 768px){
 	.header_nav{
