--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,400;1,600&display=swap');
 @import 'animate.css';
+* {
+	margin: 0;
+	padding: 0;
+  }
 body{
 	font-family:'Roboto Mono', monoespacio;
 	margin: 20 px;
 	text-align: center;
-	background-color:#EF6C00;
+	background-color: #1ff9aa;
 	background-size: cover;
 	position: center;
 	background-repeat: no-repeat;
@@ -14,18 +18,19 @@ body{
 .titulo{
 	font-weight: bold;
 	text-align: center;
-	color: #EF6C00;
-	font-size: 35px;
+	color: #f91fb7;
+	font-size: 45px;
 	font-weight: 25px;
 	background-color: white;
 	display: inline;
-	margin-top: 10px;
+	margin: auto;
+	margin-top: 2rem;
 }
 .subtitulo{
 	font-weight: bold;
 	text-align: center;
-	color: #EF6C00;
-	font-size: 35px;
+	color: #f91fb7;
+	font-size: 40px;
 	font-weight: 25px;
 	background-color: white;
 	margin: auto;
@@ -60,21 +65,23 @@ body{
 	margin: 20px;
 	border: 1 px solid;
 	padding: 15 px;
-
 }
 .header{
 	color: #fff;
 	font-size: 15px;
 	font-weight: 500;
 	top: 15px;
-}
-.header_nav{
 	display: flex;
-	list-style-type:none;
+	justify-content: space-between;
+	align-items: center;
+	padding: 3rem 1.5rem;
+}
+.header_nav li{
+	display: inline-block;
+	list-style-type: none;
 	justify-content: space-evenly;
-	flex-direction: row;
 	margin: auto;
-	margin-left: 1rem;
+	margin-left: 10.5rem;
 	margin-bottom: 5rem;
 }
 .imagenes{
@@ -164,11 +171,11 @@ div{
 	background-size: cover;
 }
 button{
-	background-color:#EF6C00;
+	background-color:#1ff9aa;
 	color: white;
 	border-radius: 5px;
 	padding: .8rem 1.5rem;
-	border: 1px solid #EF6C00;
+	border: 1px solid #1ff9aa;
 	cursor: pointer;
 }
 @media all and (max-width: 768px){
