--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@ body{
 	position: center;
 	background-repeat: no-repeat;
 	height: 100vh;
-	font-size: 1.5 rem;
+	font-size: 1.5rem;
 }
 .titulo{
 	font-weight: bold;
@@ -25,6 +25,8 @@ body{
 	display: inline;
 	margin: auto;
 	margin-top: 2rem;
+	margin-bottom: 2rem;
+	padding: 12px;
 }
 .subtitulo{
 	font-weight: bold;
@@ -82,7 +84,14 @@ body{
 	justify-content: space-evenly;
 	margin: auto;
 	margin-left: 10.5rem;
-	margin-bottom: 5rem;
+}
+.p{
+	font-size: 30px;
+	font-weight: bold;
+	margin: auto;
+	margin-left: 0.5rem;
+	margin-top: 1rem;
+	margin-bottom: 1.5rem;
 }
 .imagenes{
 	display: flex;
