cambio fondo de discografia

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -203,7 +203,7 @@ div{
 	color:white
 }
 .color1{
-	background-image: url(../assets/collage.jpg);
+	background-image: url(../assets/collage1.jpg);
 	background-size: auto;
 }
 button{
