--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,7 +37,7 @@ body{
 	background-color: white;
 	margin: auto;
 	margin-top: 0rem;
-	margin-bottom: 7rem;
+	margin-bottom: 3rem;
 	width: 50%;
 }
 .subtitulo1{
@@ -49,7 +49,7 @@ body{
 	background-color: white;
 	margin: auto;
 	margin-top: 0rem;
-	margin-bottom: 5rem;
+	margin-bottom: 3rem;
 	width: 50%;
 }
 i{
@@ -169,29 +169,47 @@ i{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	justify-content: space-around;
-	margin-bottom: 24px;
-	margin-left: 35px;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-left: 4rem;
+	margin-right: 20px;
+	margin-bottom: 44px;
 }
 .discos2{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	justify-content: space-around;
-	margin-bottom: 24px;
-	margin-left: 35px;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-left: 4rem;
+	margin-right: 20px;
+	margin-bottom: 44px;
 }
 .discos3{
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	justify-content: space-around;
-	margin-bottom: 24px;
-	margin-left: 35px;
+	justify-content: space-evenly;
+	margin: auto;
+	margin-left: 4rem;
+	margin-right: 20px;
+	margin-bottom: 44px;
+}
+.button{
+	background-color:#f91fb7;
+	color: white;
+	border-radius: 5px;
+	padding: .8rem 1.5rem;
+	border: 1px solid #f91fb7;
+	cursor: pointer;
 }
 /*biografía*/
-p{
+.textobio{
 	color: white;
+	justify-content: center;
+	margin: auto;
+	margin-right: 2rem;
+	margin-left: 2rem;
 }
 div{
 	color: white;
@@ -200,7 +218,7 @@ div{
 .contacto{
 	margin-top: 30px;
 }
-.cont {
+.cont{
 	margin: auto;
 	margin-top: 0rem;
 	margin-bottom: 10rem;
@@ -209,15 +227,15 @@ div{
 	color:white
 }
 .color1{
-	background-image: url(../assets/collage1.jpg);
-	background-size: auto;
+	background-image: url(../assets/fondocontacto.png);
+	background-size: cover;
 }
 button{
-	background-color:#1ff9aa;
+	background-color:#f91fb7;
 	color: white;
 	border-radius: 5px;
 	padding: .8rem 1.5rem;
-	border: 1px solid #1ff9aa;
+	border: 1px solid #f91fb7;
 	cursor: pointer;
 }
 @media all and (max-width: 768px){
