--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,15 +49,13 @@ body{
 .container-flex{
 	margin: auto;
 	margin-bottom: 4rem;
-	margin-top: 4rem;
 }
 .subtitulo1{
 	font-weight: bold;
 	text-align: center;
-	color: grey;
+	color: #1ff9aa;
 	font-size: 35px;
 	font-weight: 25px;
-	background-color: white;
 	margin: auto;
 	margin-top: 0rem;
 	margin-bottom: 3rem;
