--- a/css/estilos.css
+++ b/css/estilos.css
@@ -121,9 +121,12 @@ i{
 #footer{
 	color: white;
 	font-size: 25px;
-	bottom: 0px;
-	left: 80%;
 	text-align: center;
+	margin: auto;
+	margin-top: 2rem;
+	margin-left: 20rem;
+	margin-right: 20rem;
+	margin-bottom: 2rem;
 }
 /*galería*/
 .subtitulo3{
@@ -248,6 +251,9 @@ i{
 	cursor: pointer;
 }
 /*biografía*/
+.contain {
+	object-fit: contain;
+  }
 .textobio{
 	font-size: 18px;
 	color: white;
@@ -255,10 +261,10 @@ i{
 	justify-content: center;
 	margin: auto;
 	margin-top: 2rem;
-	margin-right: 2rem;
-	margin-left: 2rem;
-	padding: auto;
-	
+	margin-right: 22rem;
+	margin-left: 22rem;
+	margin-bottom: 2rem;
+	padding: auto;	
 }
 div{
 	color: white;
