--- a/css/estilos.css
+++ b/css/estilos.css
@@ -60,7 +60,7 @@ body{
 .subtitulo1{
 	font-weight: bold;
 	text-align: center;
-	color: #1ff9aa;
+	color: #ffffff;
 	font-size: 35px;
 	font-weight: 25px;
 	margin: auto;
