--- a/css/estilos.css
+++ b/css/estilos.css
@@ -288,6 +288,7 @@ div{
 }
 .color1{
 	background-color:#1ff9aa;
+	background-image: url(../assets/collage.png);
 }
 button{
 	background-color:#f91fb7;
