--- a/css/estilos.css
+++ b/css/estilos.css
@@ -37,7 +37,7 @@ body{
 	margin: auto;
 	margin-top: 0rem;
 	margin-bottom: 1rem;
-	width: 50%;
+	width: 200px;
 	padding: auto;
 }
 .redes_sociales{
@@ -66,7 +66,7 @@ body{
 	margin: auto;
 	margin-top: 0rem;
 	margin-bottom: 3rem;
-	width: 50%;
+	width: 200px;
 }
 i{
 	font-size: 3rem;
@@ -131,7 +131,7 @@ i{
 	margin: auto;
 	margin-top: 0rem;
 	margin-bottom: 3rem;
-	width: 50%;
+	width: 200px;
 	padding: auto;
 }
 .grupo1{
@@ -202,7 +202,7 @@ i{
 	margin: auto;
 	margin-top: 0rem;
 	margin-bottom: 3rem;
-	width: 50%;
+	width: 200px;
 	padding: auto;
 }
 .discos1{
