--- a/css/estilos.css
+++ b/css/estilos.css
@@ -119,8 +119,13 @@ i{
 	color: white;
 	font-size: 25px;
 	text-align: center;
+	justify-content: center;
 	margin: auto;
 }  
+.position{
+	text-align: center;
+	margin: auto;
+}
 /*galería*/
 .subtitulo3{
 	font-weight: bold;
