--- a/css/estilos.css
+++ b/css/estilos.css
@@ -49,7 +49,6 @@ body{
 	display: flex;
 	justify-content: space-between;
 	margin: auto;
-	list-style-type: none;
 	position: center;
 }	
 .mx-auto{
@@ -219,32 +218,35 @@ i{
 	width: 200px;
 	padding: auto;
 }
+.discos{
+	justify-content: center;
+}
 .discos1{
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	margin: auto;
 	margin-right: 20px;
 	margin-left: 20px;
-	margin-bottom: 12px;
+	margin-bottom: 24px;
 }
 .discos2{
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	margin: auto;
 	margin-right: 20px;
 	margin-left: 20px;
-	margin-bottom: 12px;
+	margin-bottom: 24px;
 }
 .discos3{
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-evenly;
 	margin: auto;
 	margin-right: 20px;
 	margin-left: 20px;
-	margin-bottom: 12px;
+	margin-bottom: 24px;
 }
 .button{
 	background-color:#f91fb7;
