--- a/css/estilos.css
+++ b/css/estilos.css
@@ -160,52 +160,51 @@ i{
 }
 .grupo1{
 	display: flex;
-	flex-direction: row;
 	justify-content: space-evenly;
 	margin: auto;
 	margin-bottom: 24px;
-	margin-left: 35px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .grupo2{
 	display: flex;
-	flex-direction: row;
 	justify-content: space-evenly;
 	margin: auto;
 	margin-bottom: 24px;
-	margin-left: 35px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .grupo3{
 	display: flex;
-	flex-direction: row;
 	justify-content: space-evenly;
 	margin: auto;
 	margin-bottom: 24px;
-	margin-left: 35px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .grupo4{
 	display: flex;
-	flex-direction: row;
 	justify-content: space-evenly;
 	margin: auto;
 	margin-bottom: 24px;
-	margin-left: 35px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .grupo5{
 	display: flex;
-	flex-direction: row;
-	justify-content: center;
 	justify-content: space-evenly;
 	margin: auto;
 	margin-bottom: 24px;
-	margin-left: 35px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .grupo6{
 	display: flex;
-	flex-direction: row;
 	justify-content: space-evenly;
 	margin: auto;
 	margin-bottom: 24px;
-	margin-left: 35px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .foto:hover{
 	transform: scale(1.1);
