--- a/css/estilos.css
+++ b/css/estilos.css
@@ -46,7 +46,7 @@ body{
 	font-weight: 25px;
 	margin: auto;
 	margin-top: 0rem;
-	margin-bottom: 1rem;
+	margin-bottom: 3rem;
 	width: 200px;
 	padding: auto;
 }
@@ -157,6 +157,7 @@ i{
 }
 .grupos{
 	justify-content: center;
+	align-items: center;
 }
 .grupo1{
 	display: flex;
@@ -270,6 +271,12 @@ i{
 	margin-bottom: 10px;
 }
 /*biografía*/
+.fotobio{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: auto;
+}
 .textobio{
 	display: flex;
 	align-items: center;
