--- a/css/estilos.css
+++ b/css/estilos.css
@@ -281,6 +281,21 @@ a{
 	margin-top: 3rem;
 	margin-bottom: 6rem;
 }
+.botones1{
+	display:flex;
+	flex-direction: row;
+    justify-content:space-between;
+}
+.botones2{
+	display:flex;
+	flex-direction: row;
+    justify-content: space-between;
+}
+.botones3{
+	display:flex;
+	flex-direction: row;
+    justify-content: space-between;
+}
 /*biografía*/
 .fotobio{
 	display: flex;
