cambios en boton de index

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -365,7 +365,7 @@ button{
 	background-color:#f91fb7;
 	color: white;
 	border-radius: 5px;
-	padding: .8rem 1.5rem;
+	padding: 0.8rem 1.5rem;
 	border: 1px solid #f91fb7;
 	cursor: pointer;
 	margin: auto;
