--- a/css/estilos.css
+++ b/css/estilos.css
@@ -369,7 +369,9 @@ button{
 	border: 1px solid #f91fb7;
 	cursor: pointer;
 	margin: auto;
-	margin-bottom: 2rem;
+}
+.modal-title{
+	color:black;
 }
 @media all and (max-width:720px){
 	.header_nav{
