--- a/css/estilos.css
+++ b/css/estilos.css
@@ -363,9 +363,11 @@ button{
 	border: 1px solid #f91fb7;
 	cursor: pointer;
 	margin: auto;
-	margin-top: 3rem;
+	margin-top: 0.8rem;
 	margin-bottom: 3rem;
-	margin-right: 18rem;
+	margin-right: 4rem;
+	margin-left: 4rem;
+    font-size: 16px;
 }
 .modal-title{
 	color:black;
