--- a/css/estilos.css
+++ b/css/estilos.css
@@ -402,7 +402,7 @@ button{
 	margin: auto;
 	margin-top: 0.8rem;
 	margin-bottom: 3rem;
-	margin-right: 48rem;
+	margin-right: 12.5rem;
     font-size: 16px;
 }
 .modal-title{
@@ -480,6 +480,8 @@ button{
 		margin-bottom: 1rem;
 		margin-right: 10.5rem;
 		font-size: 18px;
+		height: 50px;
+		width: 50px;
 	}
 	.button3{
 		background-color:#f91fb7;
