--- a/css/estilos.css
+++ b/css/estilos.css
@@ -328,7 +328,7 @@ a{
 	align-items: center;
 	justify-content: center;
 	flex-direction: inline;
-	width: 350px;
+	width: 420px;
 	font-size: 18px;
 	color: white;
 	margin: auto;
@@ -368,10 +368,6 @@ div{
 	margin-left: 0rem;
 	text-align: left;
 }
-.color1{
-	background-color:#1ff9aa;
-	background-image: url(../assets/collage.png);
-}
 .form-control1{
 	text-align: left;
 	margin: auto;
@@ -389,10 +385,6 @@ button{
 	padding: .8rem 1.5rem;
 	border: 1px solid #f91fb7;
 	cursor: pointer;
-}
-.ff{
-	margin: auto;
-	margin-bottom: 2rem;
 }
 .button3{
 	background-color:#f91fb7;
@@ -447,9 +439,6 @@ button{
 		height: 120px;
 	}
 	.titulo{
-		display: flex;
-		align-items: center;
-		justify-content: center;
 		font-weight: bold;
 		text-align: center;
 		color: #f91fb7;
@@ -467,10 +456,8 @@ button{
 		margin-top: 20px;
 	}	
 	.contenedor-{
-		width: 10rem;
-		height: 10rem;
-		display: flex;
-		flex-direction: inline;
+		width: 1rem;
+		height: 1rem;
 		font-size: 18px;
 		margin: auto;
 		margin-left: 5.8rem;
@@ -480,8 +467,8 @@ button{
 		margin: auto;
 		margin-top: 0rem;
 		margin-bottom: 0rem;
-		width: 10rem;
-		height: 10rem;
+		width: 1rem;
+		height: 1rem;
 	}
 	.contacto{
 		width: 270px;
@@ -516,9 +503,6 @@ button{
 		font-size: 16px;
 	}
 	.redes_sociales1{
-		display: flex;
-		align-items: center;
-		justify-content: center;
 		list-style-type: none;
 		margin: auto;
 		margin-top: 3rem;
@@ -556,5 +540,18 @@ button{
 		margin-top: 1rem;
 		margin-bottom: 1rem;
 		margin-left: 6.5rem;
+	}
+	.fotobio{
+		width: 350px;
+	}
+	.textobio{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: inline;
+		width: 350px;
+		font-size: 18px;
+		color: white;
+		margin: auto;
 	}
 }
