--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+Great+Primer+SC&family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,400;1,600&display=swap');
 @import 'animate.css';
 * {
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
   }
 body{
 	font-family:'Roboto Mono', monoespacio;
@@ -491,10 +491,6 @@ button{
 		margin-bottom: 1rem;
 		margin-left: 6.5rem;
 	}
-	.fotobio{
-		width: 90%;
-		height: 250px;
-	}
 	.textobio{
 		display: flex;
 		align-items: center;
@@ -504,5 +500,14 @@ button{
 		font-size: 18px;
 		color: white;
 		margin: auto;
+	}
+	.contain1{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 420px;
+		height: 300px;
+		margin: auto;
+		margin-left: 0.5rem;
 	}
 }
